Fix issue which caused the access token to overflow the box #10069

--- a/res/css/views/settings/tabs/user/_HelpUserSettingsTab.pcss
+++ b/res/css/views/settings/tabs/user/_HelpUserSettingsTab.pcss
@@ -28,9 +28,9 @@ limitations under the License.
             margin-bottom: $spacing-16;
         }
     }
-}
 
-.mx_CopyableText {
-   overflow-x: scroll;
-   overflow-y: scroll;
+    div .mx_CopyableText {
+        overflow-x: scroll;
+        overflow-y: scroll;
+    }
 }
